Ajuste docker compose

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   coreapi-app:
     image: reegiss/core-api
+    container_name: core_container
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=prod,swagger
@@ -10,7 +11,14 @@ services:
       - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
     ports:
       - 8080:8080
+    networks:
+      - coreapi-network
+
   coreapi-postgresql:
     extends:
       file: postgresql.yml
       service: coreapi-postgresql
+
+networks:
+  coreapi-network:
+    driver: bridge
