--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -4,13 +4,20 @@ services:
     image: postgres:12.1
     container_name: postgres_container
     env_file: .env
-    volumes:
-         - ./postgresql_data/:/var/lib/postgresql/data/
+#    volumes:
+#         - ./postgresql_data/:/var/lib/postgresql/data/
     environment:
-#      - POSTGRES_USER=CoreApi
-#      - POSTGRES_PASSWORD=
-      POSTGRES_USER: $POSTGRES_USER
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      PGDATA: /data/postgres
+      - POSTGRES_USER=CoreApi
+      - POSTGRES_PASSWORD=
+#      POSTGRES_USER: $POSTGRES_USER
+#      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+#      PGDATA: /data/postgres
     ports:
       - 5432:5432
+    networks:
+      - coreapi-network
+
+networks:
+  coreapi-network:
+    driver: bridge
+
