--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -39,7 +39,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:postgresql://localhost:5432/CoreApi
     username: CoreApi
-    password:
+    password: password
     hikari:
       poolName: Hikari
       auto-commit: false
